futher fix
- compress hero image
- add config to view webpack-dev-server in the same network devices
- remove resize listener for side effect on unexpected close of navigation drawer
- nav-drawer overflow-y to auto, so scrollbar will appear when needed
- change app-shell color on dark mode to darkslate grey

--- a/src/components/app-shell/nav-drawer/nav-drawer.scss
+++ b/src/components/app-shell/nav-drawer/nav-drawer.scss
@@ -33,7 +33,7 @@ nav-drawer {
         transform: translateX(100%);
         opacity: 0;
         visibility: hidden;
-        overflow-y: scroll;
+        overflow-y: auto;
         @include transition-ease;
 
         &.open {
